<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/welcome_dj"
        android:layout_width="379dp"
        android:layout_height="57dp"
        android:text="@string/welcome_dj"
        android:textSize="18sp"
        app:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/party_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_dj">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/party_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/name_text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/playlist_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/createPartyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/playlist_fragment"
                android:name="com.kaizen.nightfolks.view.PlaylistFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/playlist_fragment" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/createPartyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/letsgo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/music_genre_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/playlist_scroll"
        app:layout_constraintTop_toBottomOf="@+id/party_name_layout"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_genres"
            app:fontFamily="@font/aldrich" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/music_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/hiphop_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiphop"
                app:chipBackgroundColor="#D50000" />

            <com.google.android.material.chip.Chip
                android:id="@+id/house_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house"
                android:textColorHighlight="#EEFFFFFF"
                android:textColorLink="@color/design_default_color_background"
                app:chipBackgroundColor="#00C853" />

            <com.google.android.material.chip.Chip
                android:id="@+id/electro_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electro"
                android:textColorHighlight="#FFFFFF"
                app:chipBackgroundColor="#DD2C00" />

            <com.google.android.material.chip.Chip
                android:id="@+id/trance_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trance"
                app:chipBackgroundColor="#0091EA" />

            <com.google.android.material.chip.Chip
                android:id="@+id/trap_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trap_music"
                app:chipBackgroundColor="#FF9100" />

            <com.google.android.material.chip.Chip
                android:id="@+id/other_genre"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_genre"
                android:textColor="#FFFFFF"
                app:chipBackgroundColor="#121111" />
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>