<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="#D1CCCC"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/history_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@color/colorPrimary"
                android:showDividers="middle|end">

                <TableRow
                    android:id="@+id/header_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/colorPrimary"
                    android:showDividers="middle">


                    <TextView
                        android:id="@+id/history_party_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/party_name" />

                    <TextView
                        android:id="@+id/history_party_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/history_music_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/music_genres" />
                </TableRow>

            </TableLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>